# scolta-core

./: .gitattributes  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  Makefile  README.md  TESTING.md  VERSIONING.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
scripts/: build-browser.sh  build.sh  validate-release.sh
src/: browser.rs  common.rs  config.rs  context.rs  conversation.rs  debug.rs  error.rs  expansion.rs  html.rs  lib.rs  prompts.rs  sanitize.rs  scoring.rs  stop_words.rs
tests/: integration.rs  pagefind_integration.rs
tests/fixtures/: drupal-page.html  expected-clean.txt  wordpress-post.html
