[package]
name = "scolta-core"
version = "0.3.7-dev"
edition = "2021"
description = "Scolta search engine core - browser WASM module for client-side search scoring, prompt management, and query expansion"
license = "MIT"
repository = "https://github.com/tag1consulting/scolta"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
