[package]
name = "scolta-core"
version = "1.0.0-rc4"
edition = "2021"
description = "Scolta search engine core - browser WASM module for client-side search scoring, prompt management, and query expansion"
license = "MIT"
repository = "https://github.com/tag1consulting/scolta-core"
readme = "README.md"
keywords = ["wasm", "search", "scoring", "pagefind"]
categories = ["wasm", "web-programming"]
exclude = ["tests/", ".github/", "CLAUDE.md", ".editorconfig"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
serde_json = "1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
